[package]
name = "cursive_table_view"
version = "0.14.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A basic table view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_table_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "table"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
cursive_core = "*"

[dev-dependencies]
cursive = "*"
rand = "0.8"

[patch.crates-io]
cursive = { git = "https://github.com/gyscos/cursive", branch = "main" }
cursive_core = { git = "https://github.com/gyscos/cursive", branch = "main" }
