[package]
name = "cursive_table_view"
version = "0.15.0"
edition = "2021"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A basic table view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_table_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "table"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
cursive_core = "0.4.0"

[dev-dependencies]
cursive = "0.21.0"
rand = "0.8"
